--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bloody_head
+name: untitled
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +39,12 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   http: ^0.13.4
   fluttertoast: ^8.0.8
+  flutter_svg: ^1.0.3
+  webview_flutter: ^3.0.0
+  bubble: ^1.2.1
+  percent_indicator: ^4.0.0
+  syncfusion_flutter_datepicker: ^19.4.53
+  
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +69,43 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+  
+    - icons/Clipboard (Notes).svg
+    - icons/Drag.svg
+    - icons/Graph (Increase).svg
+    - icons/Home.svg
+    - icons/Versions.svg
+    - icons/_first1.svg
+    - icons/_first2.svg
+    - icons/_first3.svg
+    - icons/_second1.svg
+    - icons/_second2.svg
+    - icons/_second3.svg
+    - icons/_third1.svg
+    - icons/_third2.svg
+    - icons/_third3.svg
+    - icons/_fourth1.svg
+    - icons/_fourth2.svg
+    - icons/_fourth3.svg
+    - icons/_fifth1.svg
+    - icons/_fifth2.svg
+    - icons/_fifth3.svg
+    - icons/angledown1.svg
+    - icons/rabbit.svg
+    - icons/custom.svg
+    - icons/coin.svg
+    - icons/card.svg
+    - icons/rabbitR.svg
+    - icons/search.svg
+    - icons/write.svg
+    - icons/viewrank.svg
+    - icons/placerank.svg
+    - icons/brandrank.svg
+    - icons/search_section.svg
+    - icons/search_category.svg
+    - icons/rightAngle.svg
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -76,12 +117,47 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Thin.ttf
+          weight: 100
+        - asset: fonts/Montserrat-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Montserrat-Light.ttf
+          weight: 300
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: fonts/Montserrat-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Montserrat-Black.ttf
+          weight: 900
+    - family: Noto
+      fonts:
+        - asset: fonts/NotoSansKR-Thin.ttf
+          weight: 100
+        - asset: fonts/NotoSansKR-Light.ttf
+          weight: 300
+        - asset: fonts/NotoSansKR-Regular.ttf
+          weight: 400
+        - asset: fonts/NotoSansKR-Medium.ttf
+          weight: 500
+        - asset: fonts/NotoSansKR-Bold.ttf
+          weight: 700
+        - asset: fonts/NotoSansKR-Black.ttf
+          weight: 900
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+    # - family: Schyler
+    #   fonts:
+    #     - asset: fonts/Schyler-Regular.ttf
+    #     - asset: fonts/Schyler-Italic.ttf
+    #       style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
